# worklog

./: .gitignore  Cargo.toml  pyproject.toml
src/: file_handler.rs  main.py  main.rs
src/worklog/: __init__.py
