[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "worklog"
description = "A simple log of my work"
version = "0.1"
authors = [
    { name = "Varun Barad", email = "contact@varunbarad.com" },
]
dependencies = []

[project.urls]
Homepage = "https://github.com/VarunBarad/worklog.git"

[project.scripts]
worklog = "worklog:main"